

                              KijiMR Release Notes

Version 1.0.0-rc62
  * KIJIMR-183. Adds ability to retrieve entity id from a KijiTableKeyValueStore
      reader. Call 'KijiTableKeyValueStore.getTableForReader(reader)' to get the
      underlying KijiTable object.
  * KIJIMR-181. Document default values for KeyValueStores.
  * KIJIMR-171. Reorganize project structure for multiple Hadoop distributions.
      KijiMR jars are now placed in $KIJI_MR_HOME/lib/distribution/hadoop2/.
      You can now optionally specify <classifier>hadoop2</classifer> on the KijiMR
      artifact to make your distribution requirement explicit.

Version 1.0.0-rc61
  * KIJIMR-180. Removes deprecated getEntityId() from ProducerContext.
  * KIJIMR-52. KijiTableKeyValueStore reader looks up by EntityId, not by
      String. (Incompatible change.)
  * KIJIMR-114. Declare various methods of MapReduceJobBuilder as 'final'.
  * KIJIMR-165. XML configuration of file-backed KeyValueStores did not
      properly load Hadoop default properties.
  * KIJIMR-166. Add HBase jars to MapReduce task classpath.
  * KIJIMR-167. Print better status messages indicating whether jobs succeed
      or fail.
  * KIJIMR-64. Serialize row filters & start/limit row keys for MapReduce jobs.
  * KIJIMR-151. Pass Configuration to Kiji in HFileMapReduceJobOutput.

Version 1.0.0-rc6
  * KIJIMRLIB-14. Add XML input format.
  * KIJIMR-162. Remove InterruptedException from KijiContext.getStores().
  * KIJIMR-112. Collapses MapReduceJob into KijiMapReduceJob.  Users should
      change instances of MapReduceJob in their code to KijiMapReduceJob.
  * KIJIMR-135. JobIOSpecParseException now extends RuntimeException.
  * KIJIMR-157. Removes --install option from job-history tool.
      Updates job-history.
  * KIJIMR-108. Moves forName methods from KijiMapper, KijiReducer,
      KijiGatherer, KijiProducer, KijiBulkImporter to impl package utility
      classes.